# ai------

./: 提示词.md
项目本体/: .env.example  .gitignore  README.md  pyproject.toml  权威来源配置说明.md
项目本体/app/: __init__.py  config.py  database.py  demo_data.py  main.py  models.py
项目本体/app/services/: collection.py  drafts.py  editorial.py  intelligence.py  topics.py
项目本体/app/static/css/: app.css
项目本体/app/templates/: ai_workspace.html  artifact_detail.html  base.html  draft_edit.html  draft_generate.html  index.html  topic_detail.html
项目本体/app/templates/partials/: collection_status.html  editorial_review.html  save_status.html  topic_list.html
项目本体/tests/: test_app.py  test_collection.py  test_demo_data.py  test_editorial.py  test_intelligence.py  test_topics_and_drafts.py
