[project]
name = "ai-radar"
version = "0.1.0"
description = "面向 AI 内容创作者的热点信息聚合 MVP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "jinja2>=3.1,<4.0",
    "pydantic-settings>=2.6,<3.0",
    "python-multipart>=0.0.18,<1.0",
    "sqlalchemy>=2.0,<3.0",
    "uvicorn[standard]>=0.32,<1.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28,<1.0",
    "pytest>=8.3,<9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
